# sudoku-ar

./: .gitignore  CMakeLists.txt  README.md  SudokuAR.cpp  SudokuAR.h  main.cpp  main.h  package.xml  preparing_dataset.py  solve_puzzle.cpp  sudoku_ar.cpp  sudoku_ar.h  testing_th.py  training_cnn.py  use_cnn.py
launch/: sudoku.launch
misc/: init.py  testing_thresh.py
msg/: predicted.msg
neural_net/: params.py  preparing_dataset.py  training_cnn.py  use_cnn.py
puzzle_solver/: sudoku_solver.py  training_cnn.py
python_solution/: sudoku_solver.py  training_cnn.py
scripts/: params.py  preparing_dataset.py  publish_predictions.py  training_cnn.py  use_cnn.py
scripts/trained_net/: combination_architecture_2018-07-08_17.50.40.json
src/: DrawPrimitives.h  PuzzleSolver.h  SudokuAR.cpp  SudokuAR.h  main.cpp  mainPablo.cpp  solve_puzzle.cpp  vision_node.cpp
